* fixed issue with `rowcount` if MDX already contains HEAD (#345) * fixed broken navigation after a page refresh (#339) * fixed navigating to Iris BI issue (#349) * fixed issue with a legend for speedometer, when visibility option has been saved on the client side (#340) * now filters panel always fits to max height of the dashboard if no user settings for it (#347) * now widgets perfectly fit to the screen, but if the widget is small - the widget becomes larger and the dashboard becomes scrollable. this solves the issue when there are many widgets on the dashboard (#347) * added support of format that comes from widget info for text meters (№344) * fixed issue with fitting widgets into the screen after the redesign * fixed fullscreen widget bottom margin

--- a/src/app/components/screens/dashboard-screen/dashboard-screen.component.scss
+++ b/src/app/components/screens/dashboard-screen/dashboard-screen.component.scss
@@ -53,6 +53,7 @@ gridster {
         height: auto !important;
         transform: none !important;
         transition: none !important;
+        margin: 0 !important;
         & .drag-handle {
             pointer-events: none;
         }
